--- a/index.html
+++ b/index.html
@@ -1,13 +1,92 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en-US">
 <head>
-<meta charset="utf-8">
-<title>...</title>
+<meta charset="UTF-8" />
+<title>project</title>
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+<!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+  <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+<![endif]-->
+
+<script type="text/javascript" src="//use.typekit.net/ihl4uov.js"></script>
+<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+<!-- external font resources -->
+
+<script type='text/javascript' src='/lib/jquery-1.11.0.min.js'></script>
+<script src="/lib/modernizr-2.5.3.min.js"></script>
 </head>
 
-<body id="com.demeyere">
+<body>
 
-hi
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<style>
+/* (xs) Extra small devices (phones, less than 768px) */
+/* No media query since this is the default */
+  
+/* (sm) Small devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+
+} /* /@media sm */
+
+
+/* (md) Medium devices (desktops, 992px and up) */
+@media (min-width: 992px) {
+
+} /* /@media md */
+
+
+/* (lg) Large devices (large desktops, 1200px and up) */
+@media (min-width: 1200px) {
+
+} /* /@media lg */
+
+</style>
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<header class="projectname"><div class="container">
+
+<div class="row">
+
+<div class="col-xs-6">
+1
+<!-- /column1 --></div>
+
+<div class="col-xs-6">
+2
+<!-- /column2 --></div>
+
+<!-- /row --></div>
+
+<!-- /header.projectname --></div></header>
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<section class="description"><div class="container">
+<p>Project description</p>
+</div></section>
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<footer class="projectname"><div class="container">
+
+footer
+<!-- /footer.projectname --></div></footer>
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/lib/my-jquery.js"></script>
 
 </body></html>
