add some content

--- a/index.html
+++ b/index.html
@@ -72,7 +72,31 @@
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
 <section class="description"><div class="container">
-<p>Project description</p>
+
+<div class="row">
+
+<div class="col-sm-6">
+1
+<!-- /column1 --></div>
+
+<div class="col-sm-6">
+
+
+<p>Vogel Design, Inc. is a full-service marketing strategy and brand management firm providing creative solutions for privately held companies.</p>
+
+<p>We are architects of marketing. We design, build and refine brand strategies and go-to-market plansso our clients can focus on their core business. The Vogel Design team delivers cost-effective marketing alternatives, hands-on client service and tangible results.</p>
+
+<p>We make it easy to do business with us – some of our clients leverage our talent for project specific work, other clients look to us for strategic guidance and support for total integration of all their marketing initiatives.</p>
+
+<p>Vogel Design offers an outsourced solution for small businesses who don’t have or can’t afford additional experienced marketing professionals on staff. Your work will be managed and executed by an experienced team of marketing experts who have been in business for decades.</p>
+
+<p>Contact Vogel Design at 952.401.9420 or e-mail info@vogeldesign.com to learn more.</p>
+
+<!-- /column2 --></div>
+
+<!-- /row --></div>
+
+
 </div></section>
 
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
