--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 <head>
 <meta charset="UTF-8" />
-<title>project</title>
+<title>Vogel Design Inc</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -24,15 +24,19 @@
 <script src="/lib/modernizr-2.5.3.min.js"></script>
 
 <style>
-/* (xs) Extra small devices (phones, less than 768px) */
-/* No media query since this is the default */
+/* (xs) less than 768px — this is the default */
 
 header h1 {
   text-align:center;
+  margin:0;
+  margin-top:30px;
   }
 header h2 {
   color:#f58120;
   text-align:center;
+  margin:0;
+  margin-top:10px;
+  margin-bottom:20px;
   }
 
 section.description {
@@ -40,7 +44,7 @@ section.description {
   padding-top:20px; padding-bottom: 20px;
   border-top: 1px solid #52afdd;
   }
-section.description img {
+section.description img.painter {
   max-width: 100%;
   border-bottom: 2px solid #f58120;
   }
@@ -59,11 +63,12 @@ section.whatwedo {
   text-align:center;
   }
 
-footer p.vdilogo {
+.message p.vdilogo {
   text-align:center;
+  padding-top:20px;
   }
 
-footer img.vdilogo {
+.message img.vdilogo {
   max-width:90%;
   }
 
@@ -102,7 +107,7 @@ section.description div.container {
 <div class="row">
 
 <div class="col-sm-6">
-<img src="img/painter.jpg" alt="" style="max-width:100%"/>
+<img class="painter" src="img/painter.jpg" alt="" style="max-width:100%"/>
 <!-- /column1 --></div>
 
 <div class="message col-sm-6">
@@ -117,6 +122,9 @@ section.description div.container {
 <p>Vogel Design offers an outsourced solution for small businesses who don’t have or can’t afford additional experienced marketing professionals on staff. Your work will be managed and executed by an experienced team of marketing experts who have been in business for decades.</p>
 
 <p>Contact Vogel Design at <strong>952.401.9420</strong> or e-mail <a href="mailto:info@vogeldesign.com">info@vogeldesign.com</a> to learn more.</p>
+
+<p class="vdilogo"><img class="vdilogo" src="img/vdi-logo-500-t.png" alt="vogel design inc" width="250" /></p>
+
 
 <!-- /column2 --></div>
 
@@ -135,14 +143,6 @@ Search Engine Optimization, Digital Communications, Cross Media Campaigns, Promo
 </p>
 
 </div></section>
-
-<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-<footer class="vogeldesign"><div class="container">
-
-<p class="vdilogo"><img class="vdilogo" src="img/vdi-logo.jpg" alt="vogel design inc" width="500" /></p>
-
-<!-- /footer.vogeldesign --></div></footer>
 
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
