add strong around eMail

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ section.description div.container {
 
 <p>Vogel Design offers an outsourced solution for small businesses who don’t have or can’t afford additional experienced marketing professionals on staff. Your work will be managed and executed by an experienced team of marketing experts who have been in business for decades.</p>
 
-<p>Contact Vogel Design at <strong>952.401.9420</strong> or e-mail <a href="mailto:info@vogeldesign.com">info@vogeldesign.com</a> to learn more.</p>
+<p>Contact Vogel Design at <strong>952.401.9420</strong> or e-mail <strong><a href="mailto:info@vogeldesign.com">info@vogeldesign.com</a></strong> to learn more.</p>
 
 <p class="vdilogo"><img class="vdilogo" src="img/vdi-logo-500-t.png" alt="vogel design inc" width="250" /></p>
 
