change painter baseline color

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ section.description {
   }
 section.description img.painter {
   max-width: 100%;
-  border-bottom: 2px solid #f58120;
+  border-bottom: 2px solid #000000;
   }
 
 section.description div.message {
