--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
 
-<script type="text/javascript" src="//use.typekit.net/ihl4uov.js"></script>
-<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+<script src="https://use.typekit.net/rah7tnr.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -27,16 +27,29 @@
 /* (xs) less than 768px — this is the default */
 
 header h1 {
+  font-family: "semplicitapro";
+  font-weight: 700;
   text-align:center;
   margin:0;
   margin-top:30px;
   }
 header h2 {
+  font-family: "semplicitapro";
+  font-weight: 700;
   color:#f58120;
   text-align:center;
   margin:0;
   margin-top:10px;
   margin-bottom:20px;
+  }
+  
+p {
+  font-family: "semplicitapro";
+  font-weight: 400;
+  }
+
+p strong {
+  font-weight: 700;
   }
 
 section.description {
