add fade; update painter img; other revisions;

--- a/index.html
+++ b/index.html
@@ -26,14 +26,22 @@
 <style>
 /* (xs) less than 768px — this is the default */
 
-header h1 {
+header {
+  background-color:#52afdd;
+  height:35px;
+  background: url(img/gradient.jpg);
+    background-size: 35px 35px;
+    background-repeat: repeat-x;
+  }
+
+section.vogeldesign h1 {
   font-family: "semplicitapro";
   font-weight: 700;
   text-align:center;
   margin:0;
-  margin-top:30px;
+  margin-top:25px;
   }
-header h2 {
+section.vogeldesign h3 {
   font-family: "semplicitapro";
   font-weight: 700;
   color:#f58120;
@@ -53,9 +61,7 @@ p strong {
   }
 
 section.description {
-  background-color:#f6f6f4;
   padding-top:20px; padding-bottom: 20px;
-  border-top: 1px solid #52afdd;
   }
 section.description img.painter {
   max-width: 100%;
@@ -108,10 +114,16 @@ section.description div.container {
 
 <header class="vogeldesign"><div class="container">
 
-<h1>Target your Market &mdash; by Design</h1>
-<h2>Designing. <span class="visible-xs-inline"><br></span>Marketing. <span class="visible-xs-inline"><br></span>Solutions.</h2>
-
 <!-- /header.vogeldesign --></div></header>
+
+<!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+
+<section class="vogeldesign"><div class="container">
+
+<h1>Target Your Market &mdash; by Design</h1>
+<h3>Designing. <span class="visible-xs-inline"><br></span>Marketing. <span class="visible-xs-inline"><br></span>Solutions.</h3>
+
+<!-- /.vogeldesign --></div></section>
 
 <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
@@ -120,7 +132,7 @@ section.description div.container {
 <div class="row">
 
 <div class="col-sm-6">
-<img class="painter" src="img/painter.jpg" alt="" style="max-width:100%"/>
+<img class="painter" src="img/painter2.jpg" alt="" />
 <!-- /column1 --></div>
 
 <div class="message col-sm-6">
@@ -150,9 +162,9 @@ section.description div.container {
 <section class="whatwedo"><div class="container">
 
 <p>
-Brand Management, Go-to-Market Plans, Identity Systems & Guidelines, Copywriting & Content Generation, Website Design and Enhancement, 
+Brand Management • Go-to-Market Plans • Identity Systems & Guidelines • Copywriting & Content Generation • Website Design and Enhancement •  
 <span class="visible-lg-inline"><br></span>
-Search Engine Optimization, Digital Communications, Cross Media Campaigns, Promotional & Advertising Campaigns, Public Relations.
+Search Engine Optimization • Digital Communications • Cross Media Campaigns, Promotional & Advertising Campaigns • Public Relations.
 </p>
 
 </div></section>
