final revisions before i push this to vogeldesign.com

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ header {
   background-color:#52afdd;
   height:35px;
   background: url(img/gradient.jpg);
-    background-size: 35px 35px;
-    background-repeat: repeat-x;
+  background-size: 35px 35px;
+  background-repeat: repeat-x;
   }
 
 section.vogeldesign h1 {
@@ -132,7 +132,7 @@ section.description div.container {
 <div class="row">
 
 <div class="col-sm-6">
-<img class="painter" src="img/painter2.jpg" alt="" />
+<img class="painter" src="img/painter3.jpg" alt="" />
 <!-- /column1 --></div>
 
 <div class="message col-sm-6">
@@ -164,7 +164,7 @@ section.description div.container {
 <p>
 Brand Management • Go-to-Market Plans • Identity Systems & Guidelines • Copywriting & Content Generation • Website Design and Enhancement •  
 <span class="visible-lg-inline"><br></span>
-Search Engine Optimization • Digital Communications • Cross Media Campaigns, Promotional & Advertising Campaigns • Public Relations.
+Search Engine Optimization • Digital Communications • Cross Media Campaigns • Promotional & Advertising Campaigns • Public Relations
 </p>
 
 </div></section>
