--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@ section.vogeldesign h1 {
   margin:0;
   margin-top:25px;
   }
+sup {
+  color:#bbbbbb;
+  }
 section.vogeldesign h3 {
   font-family: "semplicitapro";
   font-weight: 700;
@@ -120,7 +123,7 @@ section.description div.container {
 
 <section class="vogeldesign"><div class="container">
 
-<h1>Target Your Market &mdash; by Design</h1>
+<h1>Target Your Market &mdash; by Design<sup>®</sup></h1>
 <h3>Designing. <span class="visible-xs-inline"><br></span>Marketing. <span class="visible-xs-inline"><br></span>Solutions.</h3>
 
 <!-- /.vogeldesign --></div></section>
