--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <title>Vogel Design Inc</title>
 
+<meta name="google-site-verification" content="Ngt2HaBzkM2n4hEfEUTkznRYZ7bQqVI4Tj1319rYATY" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
