--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
   <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 <![endif]-->
 
-<script src="https://use.typekit.net/rah7tnr.js"></script>
-<script>try{Typekit.load({ async: true });}catch(e){}</script>
+<link rel="stylesheet" href="https://use.typekit.net/rah7tnr.css">
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
