--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 <meta name="google-site-verification" content="Ngt2HaBzkM2n4hEfEUTkznRYZ7bQqVI4Tj1319rYATY" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<meta name="date" content="2020-06-11 19:12 -0500" >
+
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
@@ -177,7 +179,15 @@ Search Engine Optimization • Digital Communications • Cross Media Campaigns 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/lib/my-jquery.js"></script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-3489603-34"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-3489603-34');
+</script>
+
 </body></html>
 
-<!-- 2015-11-11 10:55 -->
-<!-- 2019-06-05 16:30 -->
